--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
----
-version: '3.4'
 services:
   weaviate:
     command:
@@ -23,5 +21,35 @@ services:
       DEFAULT_VECTORIZER_MODULE: 'none'
       ENABLE_MODULES: 'text2vec-cohere,text2vec-huggingface,text2vec-palm,text2vec-openai,generative-openai,generative-cohere,generative-palm,ref2vec-centroid,reranker-cohere,qna-openai'
       CLUSTER_HOSTNAME: 'node1'
+    depends_on:
+      - vllm-embedding
+
+  vllm-embedding:
+    image: vllm/vllm-openai:latest
+    ports:
+      - "8000:8000"
+    command:
+      - --model
+      - BAAI/bge-small-en-v1.5
+      - --host
+      - 0.0.0.0
+      - --port
+      - "8000"
+      - --served-model-name
+      - bge-small-en-v1.5
+    environment:
+      - HF_TOKEN=${HF_TOKEN:-}
+    volumes:
+      - vllm_cache:/root/.cache/huggingface
+    restart: unless-stopped
+    deploy:
+      resources:
+        reservations:
+          devices:
+            - driver: nvidia
+              count: all
+              capabilities: [gpu]
+
 volumes:
   weaviate_data:
+  vllm_cache:
